crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@pypi-missing-version.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
assertion_line: 3710
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: 'my-dep' with specifiers '>=1.0' does not match the locked version '0a0.dev0'
