crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@pypi-no-longer-dynamic.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: source tree hash for dynamic-dep does not match the hash in the lock-file
    Caused by: the computed source tree hash is '50db39844d97e7135f4c4f85d97e02b97f82179de450ca879c12a8fd5db456cc', but the lock-file contains '93b37bda9cded35069601a8e2d2cecdba7a13fe9ac356985c53784c26461911d'
