crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@pypi-target-specific-dependency-override-mismatch.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
expression: s
snapshot_kind: text
---
environment 'default' does not satisfy the requirements of the project for platform 'variant-b'
    Diagnostic severity: error
    Caused by: 'my-dep' with specifiers '==1.0.2' does not match the locked version '1.0.1'
