crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@pypi-target-specific-index-url-mismatch.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
assertion_line: 263
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'variant-cuda'
    Diagnostic severity: error
    Caused by: 'my-dep' requires index https://cuda.example.com/simple but the lock file has https://cpu.example.com/simple
