crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@pypi-target-specific-same-hash.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
expression: s
snapshot_kind: text
---
environment 'default' does not satisfy the requirements of the project for platform 'variant-cpu'
    Diagnostic severity: error
    Caused by: 'my-dep' requires index https://cpu.example.com/simple but the lock file has https://cuda.example.com/simple
