crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@solve-groups-pypi.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: the requirement 'packaging>=20.0' could not be satisfied (required by 'matplotlib')
