crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@source-recursive-dependency-changed-dir.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
snapshot_kind: text
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: the locked source package 'foobar' does not match the requested source package, the locked path 'foobar' does not match the requested path 'not-foobar'
